# -fastAPI-LMS

./: .gitignore  README.md  docker-compose.yaml  start_terminal.sh
backend/: docker-compose.yaml  pyproject.toml
backend/api/: main.py  migrate_db.py
backend/api/cruds/: course.py  create_course.py  flow.py  image.py  read_course.py  task.py  update_course.py  user.py
backend/api/migration/: add_rows.py  add_user.py  m001_add_user_kind.py  m002_add_user.py  m003_add_content.py  m004_add_course.py  m005_add_course_grant.py  m006_add_taking_course.py  m007_add_block.py  m008_add_block_rule.py  m009_add_flow.py  m010_add_flow_grant.py  m011_add_flow_rules.py  m012_add_pagegroups.py  m013_add_flowpages.py  m013_add_pages.py  m014_add_pagegroup_flow_pages.py  m014_add_single_text_questions.py  m015_add_multiple_text_question.py  m015_add_pages.py  m016_add_descriptive_text_question.py  m016_add_question.py  m017_add_choice_question.py  m017_add_single_text_questions.py  m018_add_choice_question_choice.py  m018_add_multiple_text_question.py  m019_add_descriptive_text_question.py  m019_add_pagegroup_flow_pages.py  m020_add_blank.py  m020_add_choice_question.py  m021_add_choice_question_choice.py  m021_add_correct_answers.py  m022_add_blank.py  m022_add_flow_sessions.py  m023_add_correct_answers.py  m023_add_flow_session_flow_pages.py  m024_add_flow_session_blank_answer.py  m025_add_KITsuurinabi_URL.py  m025_add_flow_session_flow_pages.py  m026_add_flow_session_blank_answer.py
backend/api/models/: block.py  content.py  course.py  flow.py  (+7 more)
backend/docker/: Dockerfile
(+78 files in other folders)
