[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
SQLAlchemy = "^1.4.31"
python-jose = "^3.3.0"
aiomysql = "^0.0.22"
passlib = "^1.7.4"
yamale = "^4.0.3"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
